make-a-wish-salesforce/src/objects/npe4__Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Adult_Emergency_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can find the Wish child's emergency contact using this field. if it is true, then this user can contact this person for emergency.</description>
        <label>Adult Emergency Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Best Contact for Treating Healthcare Provider</inlineHelpText>
        <label>Best Contact for Treating MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decead__c</fullName>
        <formula>npe4__RelatedContact__r.npsp__Deceased__c</formula>
        <inlineHelpText>This field can be updated on the individual's Contact Record.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Wish_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Former_MP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Preferred_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked as True to check when the contact is selected in preferred in update contact info page.</description>
        <label>Hidden Preferred Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_isparentFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden isparentFirst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate that record created from mulesoft or not</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Comped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FLS removed 2019-09-13 as the information in this field is now housed on the Wish Affiliation object.</description>
        <label>Non-Comped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Legal_Guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>describe Parent or Legal Guardian of wish child</description>
        <label>Parent/Legal Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Medical_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked when Type field is Medical Professional.</description>
        <label>Qualifying MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referring_Medical_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked when Type is selected as Medical Professional.</description>
        <label>Referral Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Record_Type__c</fullName>
        <formula>npe4__RelatedContact__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residing_with_Wish_child__c</fullName>
        <description>It will define wish child residing with wish child or not. FLS removed 2019-09-13 as the information in this field is now housed on the Wish Affiliation object.</description>
        <label>Residing with Wish child</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Wish_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FLS removed 2019-09-13 as the information in this field is now housed on the Wish Affiliation object.</description>
        <label>Send Wish Forms to</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <formula>Wish_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treating_HCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treating MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAT_Data_Warning__c</fullName>
        <formula>If(datevalue(CreatedDate) &lt; DATE(2019, 09, 25), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT Data Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_18__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Non-adults participants</description>
        <label>Under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Count__c</fullName>
        <description>Enables better record counting functions on reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wish_End_Date__c</fullName>
        <description>This field populates wish end date.</description>
        <label>Hidden Wish End  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wish_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Described Wish Participants</description>
        <label>Wish Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wish_Start_Date__c</fullName>
        <description>This field populates the wish start.</description>
        <label>Hidden Wish Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe4__Contact__c</fullName>
        <description>Related Contact is this Contact's ______.</description>
        <inlineHelpText>Related Contact is this Contact's ______.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe4__Description__c</fullName>
        <description>Additional information about this Relationship</description>
        <inlineHelpText>Additional information about this Relationship</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npe4__ReciprocalRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field that links to the two sides of the Relationship together.  This field should not be modified directly.  The Reciprocal Relationship will have the opposite type, if available, of this Relationship.</description>
        <inlineHelpText>System field that links to the two sides of the Relationship together.  This field should not be modified directly.  The Reciprocal Relationship will have the opposite type, if available, of this Relationship.</inlineHelpText>
        <label>Reciprocal Relationship</label>
        <referenceTo>npe4__Relationship__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe4__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hidden Relationships List</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe4__Relationship_Explanation__c</fullName>
        <description>Text formula that constructs a sentence explaining the relationship between the two Contacts</description>
        <formula>TEXT(npe4__RelatedContact__r.Salutation) + " " + npe4__RelatedContact__r.FirstName + " " + npe4__RelatedContact__r.LastName
+ "  "  +  $Label.npe4__Relationship_Explanation_Connector + " " + 
TEXT(npe4__Contact__r.Salutation) + " " + npe4__Contact__r.FirstName + " " + npe4__Contact__r.LastName + "'s " + TEXT(npe4__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Text formula that constructs a sentence explaining the relationship between the two Contacts</inlineHelpText>
        <label>Relationship Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__SYSTEM_SystemCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</description>
        <inlineHelpText>System field that indicates if this Relationship was created automatically as the reciprocal to another Relationships.</inlineHelpText>
        <label>_SYSTEM: SystemCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__Status__c</fullName>
        <description>Status of the Relationship.</description>
        <inlineHelpText>Status of the Relationship.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active Treating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe4__Type__c</fullName>
        <description>Field that describes how the Related Contact is connected to the Contact.</description>
        <inlineHelpText>Field that describes how the Related Contact is connected to the Contact.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Wish Child(Self)</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Stepmother</fullName>
                </value>
                <value>
                    <fullName>Stepfather</fullName>
                </value>
                <value>
                    <fullName>Step Sister</fullName>
                </value>
                <value>
                    <fullName>Step Brother</fullName>
                </value>
                <value>
                    <fullName>Half Sister</fullName>
                </value>
                <value>
                    <fullName>Half Brother</fullName>
                </value>
                <value>
                    <fullName>Foster Mother</fullName>
                </value>
                <value>
                    <fullName>Foster Father</fullName>
                </value>
                <value>
                    <fullName>Foster Sister</fullName>
                </value>
                <value>
                    <fullName>Foster Brother</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Coworker</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Related_Opportunity_Contact_Role__c</fullName>
        <description>When you create an Opportunity for the Contact in this Relationship, NPSP assigns this Opportunity Contact Role to the Related Contact.</description>
        <inlineHelpText>When you create an Opportunity for the Contact in this Relationship, NPSP assigns this Opportunity Contact Role to the Related Contact.</inlineHelpText>
        <label>Related Opportunity Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Credit</fullName>
                </value>
                <value>
                    <fullName>Solicitor</fullName>
                </value>
                <value>
                    <fullName>Tribute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>npe4__Related_Contact_Do_Not_Change</fullName>
        <active>true</active>
        <description>Do not allow user to change Related Contact value as it damages the paired relationship data</description>
        <errorConditionFormula>and(not( ISNEW()), ISCHANGED( npe4__RelatedContact__c ))</errorConditionFormula>
        <errorDisplayField>npe4__RelatedContact__c</errorDisplayField>
        <errorMessage>Rather than change the contacts in an existing relationship, delete this relationship and create a new on between the new contacts</errorMessage>
    </validationRules>
</CustomObject>